--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "primo-explore-clickable-logo-to-any-link": "^1.0.0",
     "primo-explore-custom-actions": "^2.0.0",
-    "primo-explore-custom-library-card-menu": "^1.0.0"
+    "primo-explore-custom-library-card-menu": "^1.0.0",
+    "primo-explore-custom-no-search-results": "^1.0.0"
   }
 }
