Move chat widget stuff to external npm package

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "primo-explore-clickable-logo-to-any-link": "^1.0.0",
     "primo-explore-custom-actions": "^2.0.0",
     "primo-explore-custom-library-card-menu": "^1.0.0",
-    "primo-explore-custom-no-search-results": "^1.0.0"
+    "primo-explore-custom-no-search-results": "^1.0.0",
+    "primo-explore-libraryh3lp-widget": "^1.0.0"
   }
 }
